# ugc_sprint_2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  requirements.dev.txt  setup.cfg
.github/workflows/: workflow.yml
ELK/configs/: logstash.conf
ELK/configs/nginx/: site.conf
api_ugc/: .env_example  README.md  UGC.postman_collection.json  docker-compose.api_ugc.yaml  requirements.txt
api_ugc/src/: main.py
api_ugc/src/api/v1/: ugc_loader.py
api_ugc/src/core/: logger.py  middleware.py  settings.py
api_ugc/src/models/: event.py
api_ugc/src/services/: ugc_kafka_producer.py
api_ugc/src/storage/: kafka.py  redis.py
design/: README.md  adr.puml  asis.puml  tobe.puml
etl/: .dockerignore  .env_example  Dockerfile  README.md  app.py  docker-compose.etl.yaml  requirements.txt
etl/modules/: ch.py  transform.py
etl/settings/: config.py
ugc_infra/: docker-compose.infra.yml  docker-compose.min.yml
ugcmongo/: README.md  docker-compose.prod.yml  docker-compose.yml  env.sample  mongo-init.sh  pyproject.toml
ugcmongo/nginx/: nginx.conf
ugcmongo/research/: README.md  generator.py  locustfile.py  report.html  saver.py
ugcmongo/src/: main.py
ugcmongo/src/api/v1/: film.py  user.py
ugcmongo/src/core/: config.py  logger.py
ugcmongo/src/models/: models.py
ugcmongo/src/services/: film.py  user.py
ugcmongo/tests/functional/: conftest.py  settings.py
ugcmongo/tests/functional/src/: test_film_crud.py  test_user_crud.py
ugcmongo/tests/functional/utils/: extract.py  models.py
