[tool.poetry]
name = "mongougc"
version = "0.1.0"
description = ""
authors = ["Sergey Simenshteyn <simenshteyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
pydantic = "^1.8.2"
aioredis = "^2.0.0"
orjson = "^3.6.5"
uvicorn = "^0.16.0"
gunicorn = "^20.1.0"
motor = "^2.5.1"
sentry-sdk = "^1.5.1"
python-logstash = "^0.4.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
isort = "^5.10.1"
aiohttp = "^3.8.1"
redis = "^4.1.0"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
